:art: Allow UriTemplate to be built with an empty template